[workspace]
members = [
    "c",
    "canvas",
    "demo/android/rust",
    "demo/common",
    "demo/magicleap",
    "demo/native",
    "examples/canvas_glutin_minimal",
    "examples/canvas_metal_minimal",
    "examples/canvas_minimal",
    "examples/canvas_moire",
    "examples/canvas_text",
    "examples/lottie_basic",
    "examples/swf_basic",
    "geometry",
    "gl",
    "gpu",
    "lottie",
    "metal",
    "renderer",
    "simd",
    "svg",
    "swf",
    "text",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia"
]
