[package]
name = "pathfinder_c"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
gl = "0.6"
libc = "0.2"

[dependencies.pathfinder_canvas]
path = "../canvas"

[dependencies.pathfinder_content]
path = "../content"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gl]
path = "../gl"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.pathfinder_simd]
path = "../simd"

[build-dependencies]
cbindgen = "0.8"
