[package]
name = "pathfinder_c"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
name = "pathfinder"

[dependencies]
font-kit = "0.6"
foreign-types = "0.3"
gl = "0.14"
libc = "0.2"
usvg = "0.20"

[dependencies.pathfinder_canvas]
features = ["pf-text"]
path = "../canvas"

[dependencies.pathfinder_color]
path = "../color"

[dependencies.pathfinder_content]
path = "../content"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gl]
path = "../gl"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.pathfinder_resources]
path = "../resources"

[dependencies.pathfinder_simd]
path = "../simd"

[dependencies.pathfinder_svg]
path = "../svg"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"
io-surface = "0.12"
metal = "0.18"

[target.'cfg(target_os = "macos")'.dependencies.pathfinder_metal]
path = "../metal"
