[package]
name = "pathfinder_canvas"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
font-kit = { version = "0.6", optional = true }

[dependencies.pathfinder_color]
path = "../color"

[dependencies.pathfinder_content]
path = "../content"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.pathfinder_text]
path = "../text"
optional = true

[dependencies.skribo]
git = "https://github.com/pcwalton/skribo.git"
rev = "fe9c968521b4a6ed98c9166a6e620028fea285c1"
optional = true

[features]
pf-text = ["pathfinder_text", "skribo", "font-kit"]
