[package]
name = "pathfinder_canvas"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
font-kit = { version = "0.6", optional = true }

[dependencies.pathfinder_color]
path = "../color"

[dependencies.pathfinder_content]
path = "../content"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.pathfinder_text]
path = "../text"
optional = true

[dependencies.skribo]
git = "https://github.com/linebender/skribo.git"
rev = "85293c3b3d7bbd7fc6b8fbfb732bc9450904211f"
optional = true

[features]
pf-text = ["pathfinder_text", "skribo", "font-kit"]
