[package]
name = "pathfinder_content"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
bitflags = "1.0"
smallvec = "1.2"

[dependencies.pathfinder_log]
path = "../log"

[dependencies.image]
version = "0.23"
default-features = false
features = []
optional = true

[features]
default = ["pf-image"]
pf-image = ["image"]

[dependencies.pathfinder_color]
path = "../color"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_simd]
path = "../simd"

[dev-dependencies]
quickcheck = "0.9"
