[package]
name = "pathfinder_font_renderer"
version = "0.5.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[features]
default = []
freetype-backend = ["freetype"]

[dependencies]
app_units = "0.6"
libc = "0.2"
log = "0.3"
lyon_path = "0.12"
serde = "1.0"
serde_derive = "1.0"

[dependencies.euclid]
version = "0.19"
features = ["serde"]

[dependencies.freetype]
version = "0.4"
optional = true

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
freetype = { version = "0.4" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.16"
core-text = "11"

[target.'cfg(target_os = "windows")'.dependencies]
dwrite-sys = "0.2"
kernel32-sys = "0.2"
uuid-sys = "0.1"
winapi = "0.2"

[dev-dependencies]
env_logger = "0.5"
