[package]
name = "pathfinder_geometry"
version = "0.4.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "Basic SIMD-accelerated geometry/linear algebra"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/pathfinder"
homepage = "https://github.com/servo/pathfinder"

[dependencies]

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[dependencies.pathfinder_simd]
path = "../simd"
version = "0.4"
