[package]
name = "pathfinder_gl"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[dependencies]
gl = "0.6"
rustache = "0.1"

[dependencies.image]
version = "0.21"
default-features = false
features = ["png_codec"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.pathfinder_simd]
path = "../simd"
