[package]
name = "pathfinder_gl"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
gl = "0.6"
half = "1.4"

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_simd]
path = "../simd"
