[package]
name = "pathfinder_gl"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
gl = "0.14"
half = "1.4"

[dependencies.pathfinder_log]
path = "../log"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_resources]
path = "../resources"

[dependencies.pathfinder_simd]
path = "../simd"
