[package]
name = "pathfinder_gpu"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
half = "1.4"
phf = "0.8"

[dependencies.image]
version = "0.21"
default-features = false
features = ["png_codec"]

[dependencies.pathfinder_color]
path = "../color"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_simd]
path = "../simd"

[build-dependencies]
phf_codegen = "0.7.24"
half = "1.4"
