[package]
name = "pathfinder_gpu"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
half = "1.4"

[dependencies.image]
version = "0.22"
default-features = false
features = ["png_codec"]

[dependencies.pathfinder_color]
path = "../color"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_simd]
path = "../simd"
