[package]
name = "pathfinder_gpu"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
half = "1.5"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.pathfinder_color]
path = "../color"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_resources]
path = "../resources"

[dependencies.pathfinder_simd]
path = "../simd"
