[package]
name = "pathfinder_metal"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
foreign-types = "0.3"
metal = "0.14"
objc = "0.2"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_simd]
path = "../simd"
