[package]
name = "pathfinder_metal"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
byteorder = "1.3"
block = "0.1"
cocoa = "0.19"
core-foundation = "0.7"
foreign-types = "0.3"
half = "1.5"
metal = "0.17"
objc = "0.2"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_resources]
path = "../resources"

[dependencies.pathfinder_simd]
path = "../simd"
