[package]
name = "pathfinder_partitioner"
version = "0.2.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[lib]
name = "pathfinder_partitioner"

[dependencies]
arrayvec = "0.4"
bincode = "1.0"
bit-vec = "0.4"
byteorder = "1.2"
env_logger = "0.5"
half = "1.0"
log = "0.3"
lyon_geom = "0.12"
lyon_path = "0.12"
serde = "1.0"
serde_derive = "1.0"

[dependencies.euclid]
version = "0.19"
features = ["serde"]

[dependencies.pathfinder_geometry]
path = "../geometry"
