[package]
name = "pathfinder_renderer"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[dependencies]
byteorder = "1.2"
fixedbitset = "0.1"
hashbrown = "0.1"
rayon = "1.0"
smallvec = "0.6"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_simd]
path = "../simd"

[dev-dependencies]
quickcheck = "0.7"
