[package]
name = "pathfinder_renderer"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[dependencies]
byteorder = "1.2"
fixedbitset = "0.1"
hashbrown = "0.1"
indexmap = "1.0"
rayon = "1.0"
serde = "1.0"
serde_json = "1.0"
smallvec = "0.6"

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_simd]
path = "../simd"

[dependencies.pathfinder_ui]
path = "../ui"

[dev-dependencies]
quickcheck = "0.7"
