[package]
name = "pathfinder_resources"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[features]
gl3_shaders = []
metal_shaders = []
fonts = []
debug-fonts = []
svg = []
textures_lut = []
textures_demo = []
textures_debug = []

[dependencies]
phf = "0.7"

[build-dependencies]
phf_codegen = "0.7"
half = "1.4"