[package]
name = "pathfinder_svg"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[dependencies]
bitflags = "1.0"
usvg = "0.9"

[dependencies.pathfinder_color]
path = "../color"

[dependencies.pathfinder_content]
path = "../content"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_renderer]
path = "../renderer"
