[package]
name = "pathfinder_text"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
euclid = "0.20"
font-kit = "0.5"
lyon_path = "0.14"

[dependencies.pathfinder_content]
path = "../content"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.skribo]
git = "https://github.com/pcwalton/skribo.git"
rev = "7386321f763cecbce9c4ece3401c81de62305036"
