[package]
name = "pathfinder_text"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
euclid = "0.20"
font-kit = "0.6"

[dependencies.pathfinder_content]
path = "../content"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.skribo]
git = "https://github.com/pcwalton/skribo.git"
rev = "fe9c968521b4a6ed98c9166a6e620028fea285c1"
