[package]
name = "pathfinder_demo"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[features]
pf-gl = []

[dependencies]
clap = "2.32"
gl = "0.6"
rayon = "1.0"
usvg = "0.7"

[dependencies.image]
version = "0.21"
default-features = false
features = ["png_codec"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[dependencies.pathfinder_content]
path = "../../content"

[dependencies.pathfinder_export]
path = "../../export"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_renderer]
path = "../../renderer"

[dependencies.pathfinder_simd]
path = "../../simd"

[dependencies.pathfinder_svg]
path = "../../svg"

[dependencies.pathfinder_ui]
path = "../../ui"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17"

[target.'cfg(target_os = "macos")'.dependencies.pathfinder_metal]
path = "../../metal"
