[package]
name = "demo"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[features]
pf-no-simd = ["pathfinder_simd/pf-no-simd"]

[dependencies]
gl = "0.6"
jemallocator = "0.1"
nfd = "0.0.4"
sdl2 = "0.32"
sdl2-sys = "0.32"

[dependencies.pathfinder_demo]
path = "../common"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_simd]
path = "../../simd"
