[package]
name = "demo"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[features]
pf-gl = ["pathfinder_demo/pf-gl"]
pf-no-simd = ["pathfinder_simd/pf-no-simd"]

[dependencies]
color-backtrace = "0.3"
gl = "0.14"
lazy_static = "1"
nfd = "0.0.4"
pretty_env_logger = "0.4"

[dependencies.euclid]
version = "0.20"
features = []

[dependencies.pathfinder_demo]
path = "../common"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_resources]
path = "../../resources"

[dependencies.pathfinder_simd]
path = "../../simd"

[dependencies.surfman]
# version = "0.2"
path = "/Users/pcwalton/Source/surfman/surfman"
features = ["sm-winit"]

[dependencies.winit]
version = "<0.19.4" # 0.19.4 causes build errors https://github.com/rust-windowing/winit/pull/1105

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.3"
io-surface = "0.12"
metal = "0.17"
objc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies.pathfinder_metal]
path = "../../metal"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.3"
