[package]
name = "pathfinder_server"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[dependencies]
app_units = "0.5"
base64 = "0.6"
bincode = "0.8"
env_logger = "0.4"
euclid = "0.15"
image = "0.17"
lazy_static = "0.2"
log = "0.3"
lru-cache = "0.1"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.fontsan]
git = "https://github.com/servo/fontsan.git"

[dependencies.pathfinder_font_renderer]
path = "../../font-renderer"
features = ["freetype"]

[dependencies.pathfinder_partitioner]
path = "../../partitioner"

[dependencies.pathfinder_path_utils]
path = "../../path-utils"
