[package]
name = "pathfinder_server"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[features]
default = []
freetype = ["pathfinder_font_renderer/freetype"]
reftests = ["rsvg", "cairo-rs", "pathfinder_font_renderer/freetype"]

[dependencies]
app_units = "0.6"
base64 = "0.6"
bincode = "1.0"
env_logger = "0.5"
euclid = "0.18"
image = "0.17"
lazy_static = "0.2"
log = "0.3"
lru-cache = "0.1"
lyon_geom = "0.11"
lyon_path = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.cairo-rs]
version = "0.3"
features = ["png"]
optional = true

[dependencies.rsvg]
version = "0.3"
optional = true

[dependencies.fontsan]
git = "https://github.com/servo/fontsan.git"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/rocket"

[dependencies.rocket_codegen]
git = "https://github.com/SergioBenitez/rocket"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/rocket"

[dependencies.pathfinder_font_renderer]
path = "../../font-renderer"

[dependencies.pathfinder_partitioner]
path = "../../partitioner"

[dependencies.pathfinder_path_utils]
path = "../../path-utils"

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }
