[package]
name = "pathfinder_server"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[features]
default = []
freetype = ["font-kit/loader-freetype-default"]
reftests = ["rsvg", "cairo-rs", "font-kit/loader-freetype-default"]

[dependencies]
app_units = "0.7"
base64 = "0.6"
bincode = "1.0"
env_logger = "0.5"
euclid = "0.19"
image = "0.19"
lazy_static = "0.2"
log = "0.3"
lru-cache = "0.1"
lyon_geom = "0.12"
lyon_path = "0.12"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.cairo-rs]
version = "0.3"
features = ["png"]
optional = true

[dependencies.rsvg]
version = "0.3"
optional = true

[dependencies.fontsan]
git = "https://github.com/servo/fontsan.git"

[dependencies.font-kit]
git = "https://github.com/pcwalton/font-kit"

[dependencies.pathfinder_partitioner]
path = "../../partitioner"

[dependencies.pathfinder_path_utils]
path = "../../path-utils"

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }
