[package]
name = "canvas_moire"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
gl = "0.14"

[dependencies.euclid]
version = "0.20"
features = []

[dependencies.pathfinder_canvas]
features = ["pf-text"]
path = "../../canvas"

[dependencies.pathfinder_color]
path = "../../color"

[dependencies.pathfinder_content]
path = "../../content"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_renderer]
path = "../../renderer"

[dependencies.pathfinder_resources]
path = "../../resources"

[dependencies.surfman]
git = "https://github.com/servo/surfman"
rev = "f3df871ac8c3926fe9106d86a3e51e20aa50d3cc"
features = ["sm-winit", "sm-x11"]

[dependencies.winit]
version = "<0.19.4" # 0.19.4 causes build errors https://github.com/rust-windowing/winit/pull/1105
